# my_review

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.cargo/: config.toml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20240830040258_create_database/: migration.sql
prisma/migrations/20240903024815_change_columns_to_plural/: migration.sql
requests/: reviewable.http  user.http
src/: main.rs
src/controller/: health_controller.rs  mod.rs  reviewable_controller.rs  user_controller.rs
src/dto/: health_response.rs  mod.rs  reviewable.rs  reviewable_creation.rs  service_generic_response.rs  user_creation.rs
src/entity/: mod.rs  user.rs
src/enums/: create_user_status.rs  health_status.rs  http_status.rs  mod.rs  user_status.rs
src/errors/: create_user_error.rs  generic_error.rs  mod.rs  user_error.rs
src/middlewares/: json_error_handler.rs  mod.rs
src/model/: mod.rs  reviewable_model.rs  user_model.rs
src/routes/: health_router.rs  mod.rs  reviewable_router.rs  user_controller.rs  user_router.rs
src/service/: mod.rs  reviewable_service.rs  user_service.rs
